--- a/static/notfound.hbs
+++ b/static/notfound.hbs
@@ -8,6 +8,7 @@
     <title>Page not found</title>
 </head>
 <body>
-<h1>This page not found!!!!!!</h1>
+    <h1>This page not found!!!!!!</h1>
+    {{error}}
 </body>
 </html>
