--- a/static/error.hbs
+++ b/static/error.hbs
@@ -8,6 +8,7 @@
     <title>Error Page</title>
 </head>
 <body>
-    <h1>Eroorrrrrrrrrrrr</h1>
+    <h1>Error</h1>
+    <h2>{{this.error}}</h2>
 </body>
 </html>
