--- a/src/email-templates/forgotPassword.pug
+++ b/src/email-templates/forgotPassword.pug
@@ -2,3 +2,4 @@ extends container
 block content
     div#id
         | Hello dear #{userName}
+        a(href=frontendUrl+'?token='+token) UPDATE PASS
